style(web): maintenance page color

--- a/maintenance/index.html
+++ b/maintenance/index.html
@@ -18,12 +18,12 @@
           xmlns="http://www.w3.org/2000/svg"
           width="24"
           height="24"
-          viewBox="0 0 24 24"
+          viewbox="0 0 24 24"
           fill="none"
-          stroke="#c0cfb2"
-          strokeWidth="8"
-          strokeLinecap="round"
-          strokeLinejoin="round"
+          stroke="rgb(20 184 166 / 1)"
+          stroke-width="2"
+          stroke-linecap="round"
+          stroke-linejoin="round"
         >
           <path d="M17 8h1a4 4 0 1 1 0 8h-1" />
           <path d="M3 8h14v9a4 4 0 0 1-4 4H7a4 4 0 0 1-4-4Z" />
