--- a/maintenance/index.html
+++ b/maintenance/index.html
@@ -4,7 +4,7 @@
     <title>Matchya | Simple, unbiased hiring for everyone</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/svg+xml" href="favicon.ico" />
+    <link rel="icon" type="image/svg+xml" href="https://matchya-assets.s3.amazonaws.com/favicon.ico" />
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@^2.2.19/dist/tailwind.min.css" rel="stylesheet">
   </head>
   </head>
